infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: athe-ingress
  namespace: athe
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: <ACM_CERT_ARN>
spec:
  rules:
    - host: shop.athe.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: athe-storefront, port: { number: 80 } } }
    - host: admin.athe.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: athe-admin, port: { number: 80 } } }
    - host: staff.athe.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: athe-staff, port: { number: 80 } } }
    - host: api.athe.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: athe-backend, port: { number: 80 } } }
